--- a/SignalRSignalingServer/SignalRSignalingServer/SignalRSignalingServer.csproj
+++ b/SignalRSignalingServer/SignalRSignalingServer/SignalRSignalingServer.csproj
@@ -7,8 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="6.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.Json" Version="6.0.4" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.17.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
     <PackageReference Include="System.Text.Encodings.Web" Version="6.0.0" />
   </ItemGroup>
